<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.androidproject.ShowLastTick"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <LinearLayout
        android:id="@+id/symbol_row"
        android:layout_width="368dp"
        android:layout_height="80dp"
        android:background="@drawable/textlines"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/close_row"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread">

        <TextView
            android:id="@+id/ticker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="218dp"
            tools:layout_editor_absoluteY="192dp" />

        <LinearLayout
            android:id="@+id/tick_date_time"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="20dp">

            <TextView
                android:id="@+id/date_label"
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tick_date"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/tick_date"
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/time_label"
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tick_time"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/tick_time"
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/close_row"
        android:layout_width="368dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/textlines"
        app:layout_constraintBottom_toTopOf="@+id/open_row"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symbol_row">

        <TextView
            android:id="@+id/close_label"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fadingEdge="horizontal"
            android:gravity="center"
            android:text="@string/tick_close"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="205dp"
            tools:layout_editor_absoluteY="241dp" />

        <TextView
            android:id="@+id/close"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="241dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/open_row"
        android:layout_width="368dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/textlines"
        app:layout_constraintBottom_toTopOf="@+id/high_row"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/close_row">

        <TextView
            android:id="@+id/open_label"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tick_open"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="205dp"
            tools:layout_editor_absoluteY="284dp" />

        <TextView
            android:id="@+id/open"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:gravity="start"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="284dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/low_row"
        android:layout_width="368dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/textlines"
        app:layout_constraintBottom_toTopOf="@+id/volume_row"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/high_row">

        <TextView
            android:id="@+id/low_label"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tick_low"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintHorizontal_chainStyle="packed"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="394dp" />

        <TextView
            android:id="@+id/low"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:gravity="start"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:layout_editor_absoluteX="205dp"
            tools:layout_editor_absoluteY="329dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/high_row"
        android:layout_width="368dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/textlines"
        app:layout_constraintBottom_toTopOf="@+id/low_row"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/open_row">

        <TextView
            android:id="@+id/high_label"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tick_high"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintHorizontal_chainStyle="packed"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="331dp" />

        <TextView
            android:id="@+id/high"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:gravity="start"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:layout_editor_absoluteX="188dp"
            tools:layout_editor_absoluteY="394dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/volume_row"
        android:layout_width="368dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/textlines"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/low_row"
        app:layout_constraintVertical_bias="0.55">

        <TextView
            android:id="@+id/volume_label"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tick_volume"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="447dp" />

        <TextView
            android:id="@+id/volume"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:gravity="start"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="143dp"
            tools:layout_editor_absoluteY="448dp" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
